--- a/src/assets/scss/common/_sidebar.scss
+++ b/src/assets/scss/common/_sidebar.scss
@@ -650,6 +650,7 @@
             #sidebar-feedback-btn-full{
               img{
                 // filter: none !important;
+                filter:var(--sidebarInactiveIconsFilter) !important;
               }
             }
             .none {
